init:create new pajes and continie work'

--- a/services.html
+++ b/services.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>lamborgini</title>
+    <title>lamborginimodels</title>
     <meta charset="UTF-8"> 
-    <link href="final.css"  rel="stylesheet">
+    <link href="services.css"  rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,21 +27,21 @@
                     <a aria-current="false" title="personal_decisions" target="_self" class="css-1akagq8" href="personal.html"><span>персональные решения</span></a>
                 </li>
                 <li id="lev-1-2" class="menu_li__3">
-                    <a aria-current="false" title="service" target="_self" class="css-1akagq8" href="services.html"><span>услуги и сервис</span></a>
+                    <a aria-current="false" title="service" target="_self" class="css-1akagq8" href="personal.html"><span class="personalhover">услуги и сервис</span></a>
                 </li>
                 <li id="lev-1-3" class="menu_li__4">
                     <a aria-current="false" title="autosport" target="_self" class="css-1akagq8" href="/en-en/motorsport"><span>автоспорт</span></a>
                 </li>
             </ul>
             <div class="search">                    
-                <button type="button" title="search" class="search__butt">
+                <a title="search" class="search__butt" >
                     <svg class="search__butt__icon" xmlns="http://www.w3.org/2000/svg" width="17.283" color="fff" height="18.023" viewBox="0 0 17.283 18.023">
                         <g transform="translate(-1463.392 -389.942)"><g>
                         <path d="M1470.762,390.983a6.426,6.426,0,1,0,6.425,6.425,6.432,6.432,0,0,0-6.425-6.425m0,13.7a7.37,7.37,0,1,1,7.37-7.37,7.379,
                                     7.379,0,0,1-7.37,7.37"></path></g><rect width="0.944" height="7.181" transform="translate(1475.069 402.736) rotate(-43.24)">                                        
                         </rect></g>
                     </svg>
-                </button>                        
+                </a>                        
             </div>
             <div id="nav-icon3">
                 <span></span>
@@ -52,182 +52,106 @@
         </nav>                    
     </header>  
     <main class="main_cs">
-        <section class="section_1">
-            <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <img alt="car" title="lamborgini" src="img/img/hero_slide_01.webp">
-                    <p class="heading">нужно время, чтобы стать неподвластным времени</p>
-                    <h2 class="heading2"><span>aventador LP 780-4 ultimate</span></h2>                    
-                  </div>
-                  <div class="swiper-slide">
-                    <img alt="car" title="lamborgini" src="img/img/hero_slide_02.webp">
-                    <p class="heading">опережая свое время</p>
-                    <h2 class="heading2">sian fkp 37</h2>
-                  </div>                  
-                  <div class="swiper-slide">
-                    <img alt="car" title="lamborgini" src="img/img/hero_slide_03.webp">
-                    <p class="heading">возьмёт всю твою душу, чтобы управлять</p>
-                    <h2 class="heading2">huracan tecnica</h2>
-                  </div>                  
-                </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
-              </div>            
-        </section>
-        <section class="section_2">
-            <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <img alt="car" title="lamborgini_technica" src="img/img/family_chooser_tecnica.webp">
-                    <h2 class="heading_section2">huracan</h2>
-                    <p class="heading2_section2">упраляет твоей душой</p>
-                    <a href="models.html" title="models" class="button_models" target="_self">
-                        <span class="tittle_button">ознакомится с моделями</span>
-                        <svg class="icon_slider" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50.464 58.271">
-                            <g stroke-width="1.5" transform="translate(-1624 -187.923)">
-                            <path d="M50.464 43.992L25.732 58.271 1 43.992V15.434L25.732 1.155l24.732 14.279z"
-                             transform="translate(1623.5 187.345)" class="hexagon on-dark"></path>
-                             <path class="icon on-dark" d="M0 0l7.432 5.674L14.864 0" 
-                             transform="rotate(-90 935.432 -711.068)"></path>
-                            </g>
-                        </svg>
-                    </a>
-                  </div>
-                  <div class="swiper-slide">
-                    <img alt="car" title="lamborgini_aventador" src="img/img/ultimae_coupe_Compositing_4terzi_00.webp">
-                    <h2 class="heading_section2">aventador</h2>
-                    <p class="heading2_section2">подлинные эмоции определяют будущее</p>
-                    <a href="models.html" title="models" class="button_models" target="_self">
-                        <span class="tittle_button">ознакомится с моделями</span>
-                        <svg class="icon_slider" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50.464 58.271">
-                            <g stroke-width="1.5" transform="translate(-1624 -187.923)">
-                            <path d="M50.464 43.992L25.732 58.271 1 43.992V15.434L25.732 1.155l24.732 14.279z"
-                             transform="translate(1623.5 187.345)" class="hexagon on-dark"></path>
-                             <path class="icon on-dark" d="M0 0l7.432 5.674L14.864 0" 
-                             transform="rotate(-90 935.432 -711.068)"></path>
-                            </g>
-                        </svg>
-                    </a>
-                  </div>
-                  <div class="swiper-slide">
-                    <img alt="car" title="lamborgini_urus" src="img/img/urus_s_family_chooser.webp">
-                    <h2 class="heading_section2">urus</h2>
-                    <p class="heading2_section2">невозможное - возможно</p>
-                    <a href="models.html" title="models" class="button_models" target="_self">
-                        <span class="tittle_button">ознакомится с моделями</span>
-                        <svg class="icon_slider" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50.464 58.271">
-                            <g stroke-width="1.5" transform="translate(-1624 -187.923)">
-                            <path d="M50.464 43.992L25.732 58.271 1 43.992V15.434L25.732 1.155l24.732 14.279z"
-                             transform="translate(1623.5 187.345)" class="hexagon on-dark"></path>
-                             <path class="icon on-dark" d="M0 0l7.432 5.674L14.864 0" 
-                             transform="rotate(-90 935.432 -711.068)"></path>
-                            </g>
-                        </svg>
-                    </a>
-                  </div>                  
-                </div>
-                <div class="swiper-pagination"></div>
-              </div>
-        </section>
-        <section class="section_3">
-            <div class="configurate">
-                <h2 class="tittle1_section3">конфигуратор -</h2>
-                <p class="tittle2_section3">создайте здесь свой urus</p>
-                <a href="personal.html" title="personal" class="button_models" target="_self">
-                    <span class="tittle_button">персональные решения</span>
-                    <svg class="icon_slider" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50.464 58.271">
-                        <g stroke-width="1.5" transform="translate(-1624 -187.923)">
-                        <path d="M50.464 43.992L25.732 58.271 1 43.992V15.434L25.732 1.155l24.732 14.279z"
-                         transform="translate(1623.5 187.345)" class="hexagon on-dark"></path>
-                         <path class="icon on-dark" d="M0 0l7.432 5.674L14.864 0" 
-                         transform="rotate(-90 935.432 -711.068)"></path>
-                        </g>
-                    </svg>
-                </a>                                    
-            </div>
-            <div class="configurate_dubl"> 
-                <h2 class="tittle1_section3">конфигуратор -</h2>
-                <p class="tittle2_section3">создайте здесь свой huracan</p>
-                <a href="personal.html" title="personal" class="button_models" target="_self">
-                    <span class="tittle_button">персональные решения</span>
-                    <svg class="icon_slider" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50.464 58.271">
-                        <g stroke-width="1.5" transform="translate(-1624 -187.923)">
-                        <path d="M50.464 43.992L25.732 58.271 1 43.992V15.434L25.732 1.155l24.732 14.279z"
-                         transform="translate(1623.5 187.345)" class="hexagon on-dark"></path>
-                         <path class="icon on-dark" d="M0 0l7.432 5.674L14.864 0" 
-                         transform="rotate(-90 935.432 -711.068)"></path>
-                        </g>
-                    </svg>
-                </a>              
-            </div>
-        </section>
-        <section class="section_4">
+        <section class="section_4" >
             <div class="configurate4">
-                <h2 class="tittle1_section4">Диллерский центр</h2>
-                <p class="tittle2_section4">найти дилера<br> в вашей стране</p>                
-            </div>           
+                <a href="final.html" title="menu" class="home" target="_self" ><span class="home1">вернуться в меню</span></a><span class="home">/услуги и сервис</span>                
+                <h2 class="tittle1_section4">lamborgini</h2>
+                <p class="tittle2_section4">услуги и сервис</p>
+            </div> 
+            <div class="cta-down">
+                <a  title="models" class="button_models" href="#top">
+                    <span class="tittle_button">ознакомится с услугами</span>
+                    <svg class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50.464 58.271">
+                        <g stroke-width="1.5" transform="translate(-1624 -187.923)">
+                        <path d="M50.464 43.992L25.732 58.271 1 43.992V15.434L25.732 1.155l24.732 14.279z"
+                         transform="translate(1623.5 187.345)" class="hexagon on-dark"></path>
+                         <path class="icon on-dark" d="M1641.906,214.094l7.354,5.666,7.518-5.666" 
+                         transform="translate(-0.406 0.406)"></path>
+                        </g>
+                    </svg>
+                </a>
+            </div>          
+        </section>
+        <section class="section_5" >
+            <div class="section_5_1" id= "top">            
+                <div class="position">
+                    <div class="configurate1">
+                        <p class="heading2">CONNECTIVITY</p>
+                        <p class="heading">Подключенные сервисы Lamborghini можно использовать сразу, как только 
+                            вы сядете в автомобиль, благодаря Lamborghini Infotainment System (LIS), интуитивно 
+                            понятной системе, обеспечивающей доступ к информации прямо из сети и быстрое и простое
+                            управление ею.</p>                        
+                    </div>
+                    <div class="imgposition">
+                        <div class="configurate2">
+                            <div class="configurate2_1">
+                                <img alt="car" title="lamborgini" src="img/img_page_4/11.webp">  
+                            </div>
+                        </div>
+                        <div class="configurate3">
+                            <div class="configurate3_1">
+                                <img alt="car" title="lamborgini" src="img/img_page_4/12.webp">  
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="position">
+                    <div class="configurate1_1">
+                        <div class="imgposition2">
+                            <div class="configurate5">
+                                <div class="configurate5_1">
+                                    <img alt="car" title="lamborgini" src="img/img_page_4/13.jpg">  
+                                </div>
+                            </div>
+                            <div class="configurate6">
+                                <div class="configurate6_1">
+                                    <img alt="car" title="lamborgini" src="img/img_page_4/14.webp">  
+                                </div>
+                            </div>
+                        </div>
+                        <div class="configurate1">                         
+                            <p class="heading2">ПРИЛОЖЕНИЕ ДЛЯ КЛИЕНТОВ</p>
+                            <p class="heading">Lamborghini UNICA – это эксклюзивное приложение, предназначенное
+                                 для клиентов Lamborghini, которые одним касанием могут подключиться к миру 
+                                 автомобильного дома в Сант-Агата-Болоньезе.</p>                            
+                        </div>
+                    </div>                    
+                </div>
+            </div>                        
         </section>
         <section class="section_5">
-            <div class="configurate5">
-                <h2 class="tittle1_section5">новости</h2>
-                <p class="tittle2_section5">lamborgini world</p>
-                <img alt="car" title="lamborgini_tecnica" src="img/img/tecnica_valencia_cover.webp"> 
-                <p class="tittle3_section5">21 октября 2022</p> 
-                <a href="http://новости" title="news" class="button_news_huracan1" target="news"> 
-                    <span class="button_news_huracan" >huracan</span>  
-                </a>
-                <div class="configurate5_1">
-                    <div class="configurate5_1_2">
-                        <a href="http://новости" title="news" class="tittle_button_news" target="_blank">
-                            <p class="tittle1_section6">HURACAN TECNICA: ON BOARD FUN</p>
-                        </a>
-                        <p class="tittle2_section6">Lamborghini Huracán Tecnica showed off its jaw-dropping<br> 
-                        prowess on the track at the Circuit Ricardo Tormo in Valencia.</p>
+            <div class="section_5_1">            
+                <div class="position">
+                    <div class="configurate1" id="last">
+                        <p class="heading2">КЛАССИЧЕСКИЕ МОДЕЛИ</p>
+                        <p class="heading">Благодаря своему новому подразделению Polo Storico компания Automobili
+                             Lamborghini хочет сохранить свое ценное наследие и свое уникальное ноу-хау. Для того
+                             чтобы легендарные автомобили не утратили своей оригинальной целостности, были предусмотрены
+                             многочисленные виды услуг, направленные на обслуживание и реставрацию ретро-машин с целью
+                             полного восстановления их аутентичного состояния и уникальных характеристик.                            
+                            Огромную ценность представляет также Исторический архив Lamborghini, в котором бережно 
+                            хранится вся документация, выпущенная «домом быков» на протяжении всей своей многолетней
+                             истории.</p>                        
                     </div>
-                    <a href="http://новости" title="news" class="button_news" target="news"> 
-                        <span class="buttonnews__1" >читать дальше</span>  
-                    </a>
-                </div>               
-            </div>           
-        </section>
-        <section class="section_news">
-            <div class="section_news_1">               
-                <img class="img_news" alt="car" title="lamborgini_urus" src="img/img/urus_perf_cover.webp">
-                <div class="configurate6_1">
-                    <p class="tittle3_sectionnews">21 октября 2022</p> 
-                    <a href="http://новости" title="news" class="button_news_1" target="news">
-                        <p class="tittle1_section6">THE URUS PERFORMANTE DEBUTS IN ROME </p>
-                    </a>
-                    <a href="http://новости" title="news" class="button_news" target="news"> 
-                        <span class="buttonnews__1" >читать дальше</span>  
-                    </a>
-                </div> 
-            </div>  
-            <div class="section_news_1">               
-                <img class="img_news" alt="car" title="lamborgini_club" src="img/img/cover_d.webp">
-                <div class="configurate6_1">
-                    <p class="tittle3_sectionnews">21 октября 2022</p> 
-                    <a href="http://новости" title="news" class="button_news_1" target="news">
-                        <p class="tittle1_section6">LAMBORGHINI CLUB ITALIA IN ABRUZZO </p>
-                    </a>
-                    <a href="http://новости" title="news" class="button_news" target="news"> 
-                        <span class="buttonnews__1" >читать дальше</span>  
-                    </a>
-                </div> 
+                    <div class="imgposition">
+                        <div class="configurate2">
+                            <div class="configurate2_1">
+                                <img alt="car" title="lamborgini" src="img/img_page_4/15.jpg">  
+                            </div>
+                        </div>                        
+                    </div>
+                </div>                
             </div>
-            <a href="http://новости" title="news" class="button_newsall" target="news"> 
-                <span class="buttonnews__1" >читать новости</span>  
-            </a>           
-        </section>
-        <div class="eco">
-            <p class="eco_tittle">Показатели расхода топлива и эмиссии всех автомобилей, представленных на этой странице*; 
-                Расход топлива в комбинированном цикле: 19,5-12,7 l/100km (WLTP); Эмиссия CO₂ в комбинированном цикле:
-                448-320 g/km (WLTP)
-            </p>
-        </div>                   
-    </main>    
+        </section>        
+        </section> 
+        <section class="section_9">
+            <div class="section_9_0">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2386.443113693142!2d11.123499934735136!3d44.65885976859362!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477fc3b4b863b99f%3A0x92e12812b537ae95!2sAutomobili%20Lamborghini%20Spa!5e0!3m2!1sru!2sby!4v1667006056373!5m2!1sru!2sby" 
+                width="1280" height="720" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>       
+        </section>               
+    </main> 
     <footer class="footer">
         <ul class="socialnetworkicon">
             <li class="instagram">
