init:create new pajes and continie work

--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>lamborginimodels</title>
+    <title>lamborginiservices</title>
     <meta charset="UTF-8"> 
     <link href="services.css"  rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,18 +30,21 @@
                     <a aria-current="false" title="service" target="_self" class="css-1akagq8" href="personal.html"><span class="personalhover">услуги и сервис</span></a>
                 </li>
                 <li id="lev-1-3" class="menu_li__4">
-                    <a aria-current="false" title="autosport" target="_self" class="css-1akagq8" href="/en-en/motorsport"><span>автоспорт</span></a>
+                    <a aria-current="false" title="autosport" target="_self" class="css-1akagq8" href="motorsport.html"><span>автоспорт</span></a>
                 </li>
             </ul>
             <div class="search">                    
-                <a title="search" class="search__butt" >
-                    <svg class="search__butt__icon" xmlns="http://www.w3.org/2000/svg" width="17.283" color="fff" height="18.023" viewBox="0 0 17.283 18.023">
-                        <g transform="translate(-1463.392 -389.942)"><g>
-                        <path d="M1470.762,390.983a6.426,6.426,0,1,0,6.425,6.425,6.432,6.432,0,0,0-6.425-6.425m0,13.7a7.37,7.37,0,1,1,7.37-7.37,7.379,
-                                    7.379,0,0,1-7.37,7.37"></path></g><rect width="0.944" height="7.181" transform="translate(1475.069 402.736) rotate(-43.24)">                                        
-                        </rect></g>
-                    </svg>
-                </a>                        
+                <form class="form1">
+                    <input class="input1" type="text" placeholder="Искать здесь...">                    
+                    <button type="submit" title="search" class="search__butt">
+                        <svg class="search__butt__icon" xmlns="http://www.w3.org/2000/svg" width="17.283" color="fff" height="18.023" viewBox="0 0 17.283 18.023">
+                            <g transform="translate(-1463.392 -389.942)"><g>
+                            <path d="M1470.762,390.983a6.426,6.426,0,1,0,6.425,6.425,6.432,6.432,0,0,0-6.425-6.425m0,13.7a7.37,7.37,0,1,1,7.37-7.37,7.379,
+                                        7.379,0,0,1-7.37,7.37"></path></g><rect width="0.944" height="7.181" transform="translate(1475.069 402.736) rotate(-43.24)">                                        
+                            </rect></g>
+                        </svg>
+                    </button>
+                </form>                             
             </div>
             <div id="nav-icon3">
                 <span></span>
@@ -162,7 +165,8 @@
                         C 6.346 19 5 17.654 5 16 L 5 8 C 5 6.346 6.346 5 8 5 z M 17 6 A 1 1 0 0 0 16 7 A 1 1 0 0 0 17 8 A 1 1 0 0 0 18 7 A 
                         1 1 0 0 0 17 6 z M 12 7 C 9.243 7 7 9.243 7 12 C 7 14.757 9.243 17 12 17 C 14.757 17 17 14.757 17 12 C 17 9.243 14.757
                          7 12 7 z M 12 9 C 13.654 9 15 10.346 15 12 C 15 13.654 13.654 15 12 15 C 10.346 15 9 13.654 9 12 C 9 10.346 10.346 9 
-                         12 9 z"/></svg>                            
+                         12 9 z"/>
+                    </svg>                            
                 </a>
             </li>
             <li class="facebook">
