--- a/models.html
+++ b/models.html
@@ -30,18 +30,21 @@
                     <a aria-current="false" title="service" target="_self" class="css-1akagq8" href="services.html"><span>услуги и сервис</span></a>
                 </li>
                 <li id="lev-1-3" class="menu_li__4">
-                    <a aria-current="false" title="autosport" target="_self" class="css-1akagq8" href="/en-en/motorsport"><span>автоспорт</span></a>
+                    <a aria-current="false" title="autosport" target="_self" class="css-1akagq8" href="motorsport.html"><span>автоспорт</span></a>
                 </li>
             </ul>
-            <div class="search">                    
-                <a title="search" class="search__butt" >
-                    <svg class="search__butt__icon" xmlns="http://www.w3.org/2000/svg" width="17.283" color="fff" height="18.023" viewBox="0 0 17.283 18.023">
-                        <g transform="translate(-1463.392 -389.942)"><g>
-                        <path d="M1470.762,390.983a6.426,6.426,0,1,0,6.425,6.425,6.432,6.432,0,0,0-6.425-6.425m0,13.7a7.37,7.37,0,1,1,7.37-7.37,7.379,
-                                    7.379,0,0,1-7.37,7.37"></path></g><rect width="0.944" height="7.181" transform="translate(1475.069 402.736) rotate(-43.24)">                                        
-                        </rect></g>
-                    </svg>
-                </a>                        
+            <div class="search">
+                <form class="form1">
+                    <input class="input1" type="text" placeholder="Искать здесь...">                    
+                    <button type="submit" title="search" class="search__butt">
+                        <svg class="search__butt__icon" xmlns="http://www.w3.org/2000/svg" width="17.283" color="fff" height="18.023" viewBox="0 0 17.283 18.023">
+                            <g transform="translate(-1463.392 -389.942)"><g>
+                            <path d="M1470.762,390.983a6.426,6.426,0,1,0,6.425,6.425,6.432,6.432,0,0,0-6.425-6.425m0,13.7a7.37,7.37,0,1,1,7.37-7.37,7.379,
+                                        7.379,0,0,1-7.37,7.37"></path></g><rect width="0.944" height="7.181" transform="translate(1475.069 402.736) rotate(-43.24)">                                        
+                            </rect></g>
+                        </svg>
+                    </button>
+                </form>                
             </div>
             <div id="nav-icon3">
                 <span></span>
