init:fixing code and finished the job

--- a/models.html
+++ b/models.html
@@ -85,8 +85,9 @@
                          неистовую динамичность с агрессией, которые воплощены в революционной конструкции монокока из 
                          углепластика. В интерьере Aventador искусно сочетаются передовые технологии, роскошное оснащение и 
                          материалы премиум-класса в лучших традициях итальянских производителей. Семейство суперкаров, которые
-                          с полным правом уже можно назвать культовыми. Узнайте больше о технических характеристиках, габаритных
-                           размерах, производительности и подробностях оснащения всех новых моделей Lamborghini Aventador.</p>
+                         с полным правом уже можно назвать культовыми. Узнайте больше о технических характеристиках, габаритных
+                         размерах, производительности и подробностях оснащения всех новых моделей Lamborghini Aventador.
+                        </p>
                         <p class="heading2">AVENTADOR LP 780-4 ULTIMAE</p>
                         <p class="heading2">AVENTADOR LP 780-4 ULTIMAE ROADSTER</p>
                         <p class="heading2">AVENTADOR SVJ</p>
@@ -145,11 +146,12 @@
                     <div class="configurate1">
                         <img alt="car" title="lamborgini" src="img/img_page2/Image_34.webp">
                         <p class="heading">Lamborghini Urus – это первый в мире суперспортивный внедорожник, в котором роскошь,
-                             спортивный дух и высокие эксплуатационные свойства сочетаются с комфортом и универсальностью, обеспечивая
-                              наилучшие для данной категории автомобилей динамические характеристики, уникальный дизайн и непревзойденную
-                               элегантность. Сущность автомобиля Urus заключает в себе много граней – спортивную, элегантную и внедорожную.
-                                Автомобиль прекрасно подходит для ежедневного вождения в любых условиях окружающей среды. Типичный рев
-                                 мотора и высокие эксплуатационные свойства делают Lamborghini Urus удивительным автомобилем.</p>
+                            спортивный дух и высокие эксплуатационные свойства сочетаются с комфортом и универсальностью, обеспечивая
+                            наилучшие для данной категории автомобилей динамические характеристики, уникальный дизайн и непревзойденную
+                            элегантность. Сущность автомобиля Urus заключает в себе много граней – спортивную, элегантную и внедорожную.
+                            Автомобиль прекрасно подходит для ежедневного вождения в любых условиях окружающей среды. Типичный рев
+                            мотора и высокие эксплуатационные свойства делают Lamborghini Urus удивительным автомобилем.
+                        </p>
                         <p class="heading2">URUS S</p>
                         <p class="heading2">URUS PERFORMANTE</p>
                         <p class="heading2">URUS</p>
@@ -179,8 +181,9 @@
                         <p class="heading">Уникальные модели Lamborghini — самые эксклюзивные ограниченные версии, создаваемые 
                             для небольших групп избранных клиентов. Находящиеся на вершине мира суперкаров, уникальные модели 
                             Lamborghini в полной мере воплощают истинный характер Lamborghini, отчетливо проявляющийся в каждой
-                             детали. Безусловно, эти суперкары оснащаются самыми передовыми разработками в области дизайна и 
-                             технологий.</p>
+                            детали. Безусловно, эти суперкары оснащаются самыми передовыми разработками в области дизайна и 
+                            технологий.
+                        </p>
                         <p class="heading2">COUNTACH LPI 800-4</p>
                         <p class="heading2">SIÁN FKP 37</p>
                         <p class="heading2">SIÁN ROADSTER</p>                        
@@ -217,7 +220,8 @@
                             <p class="heading">Устремленные в будущее, эти уникальные произведения созданы, 
                                 чтобы раздвигать границы технологий и дизайна. Демонстрируемые на самых престижных 
                                 автосалонах, они дают уникальную возможность взглянуть на самые инновационные разработки,
-                                 которые Lamborghini может реализовать в своих будущих серийных моделях.</p>
+                                которые Lamborghini может реализовать в своих будущих серийных моделях.
+                            </p>
                             <p class="heading2">TERZO MILLENNIO</p>
                             <p class="heading2">ASTERION</p>
                             <p class="heading2">ESTOQUE</p>                         
