--- a/motorsport.html
+++ b/motorsport.html
@@ -30,7 +30,7 @@
                     <a aria-current="false" title="service" target="_self" class="css-1akagq8" href="services.html"><span>услуги и сервис</span></a>
                 </li>
                 <li id="lev-1-3" class="menu_li__4">
-                    <a aria-current="false" title="autosport" target="_self" class="css-1akagq8" href="/en-en/motorsport"><span class="modelhover">автоспорт</span></a>
+                    <a aria-current="false" title="autosport" target="_self" class="css-1akagq8" href="motorsport.html"><span class="modelhover">автоспорт</span></a>
                 </li>
             </ul>
             <div class="search">                    
@@ -111,7 +111,8 @@
                             Corse, созданное с целью оказания максимальной поддержки спортивным клиентам бренда 
                             Automobili Lamborghini, разрабатывает и производит автомобили, которые соревнуются в 
                             самых престижных чемпионатах GT во всем мире. Кроме того, Squadra Corse организует 
-                            Lamborghini Super Trofeo, самый скоростной мономарочный чемпионат в мире.</p>                        
+                            Lamborghini Super Trofeo, самый скоростной мономарочный чемпионат в мире.
+                        </p>                        
                     </div>
                     <div class="imgposition">
                         <div class="configurate2">
@@ -151,7 +152,8 @@
                                    на свободную тренировку, квалификацию и две гонки по 50 минут каждая. Экипажи,
                                     участвующие в соревновании, разделены на четыре класса: Pro, Pro-Am, Am и 
                                     Lamborghini Cup. Главное событие сезона – финал World Final, во время которого
-                                     коронуются чемпионы мира Lamborghini.</p>
+                                     коронуются чемпионы мира Lamborghini.
+                            </p>
                             <p class="heading2">SUPER TROFEO</p>                            
                         </div>
                     </div>                    
@@ -168,7 +170,8 @@
                                   Lamborghini соревнуются более 20 клиентских команд, избравших в качестве своих
                                    гоночных болидов Huracán GT3 EVO. Более 40 международных титулов, завоеванных с 2015
                                     года, когда дебютировал проект Huracán GT3, является лучшей визитной карточкой
-                                     Automobili Lamborghini в мире чемпионатов по гонкам GT.</p>
+                                     Automobili Lamborghini в мире чемпионатов по гонкам GT.
+                            </p>
                             <p class="heading2">ЧЕМПИОНАТ GT3</p>                         
                     </div>
                     <div class="imgposition">
@@ -204,7 +207,8 @@
                                 своих спортивных клиентов. Философия производства суперкаров Automobili Lamborghini
                                 применяется и к гоночным моделям, в которых такие концепции, как технология и внимание
                                 к деталям, доводятся до высочайшего уровня совершенства, позволяющего состязаться на
-                                гоночных трассах по всему миру.</p>
+                                гоночных трассах по всему миру.
+                            </p>
                             <p class="heading2">ГОНОЧНЫЕ АВТОМОБИЛИ</p>
                             <p class="heading2">УНИКАЛЬНЫЕ ЭКЗЕМПЛЯРЫ</p>                            
                         </div>
@@ -221,7 +225,8 @@
                             <p class="heading3">СОБЫТИЯ</p>
                             <p class="heading">Станьте гонщиком чемпионата Lamborghini Super Trofeo благодаря 
                                 официальному курсу вождения Lamborghini Pilota или испытайте эксклюзивный опыт 
-                                гоночного уик-энда Super Trofeo в гламурной атмосфере Lamborghini Hospitality.</p>
+                                гоночного уик-энда Super Trofeo в гламурной атмосфере Lamborghini Hospitality.
+                            </p>
                             <p class="heading2">LAMBORGHINI СОБЫТИЯ</p>                                                     
                     </div>                                        
                 </div>
