--- a/services.html
+++ b/services.html
@@ -83,7 +83,8 @@
                         <p class="heading">Подключенные сервисы Lamborghini можно использовать сразу, как только 
                             вы сядете в автомобиль, благодаря Lamborghini Infotainment System (LIS), интуитивно 
                             понятной системе, обеспечивающей доступ к информации прямо из сети и быстрое и простое
-                            управление ею.</p>                        
+                            управление ею.
+                        </p>                        
                     </div>
                     <div class="imgposition">
                         <div class="configurate2">
@@ -116,7 +117,8 @@
                             <p class="heading2">ПРИЛОЖЕНИЕ ДЛЯ КЛИЕНТОВ</p>
                             <p class="heading">Lamborghini UNICA – это эксклюзивное приложение, предназначенное
                                  для клиентов Lamborghini, которые одним касанием могут подключиться к миру 
-                                 автомобильного дома в Сант-Агата-Болоньезе.</p>                            
+                                 автомобильного дома в Сант-Агата-Болоньезе.
+                            </p>                            
                         </div>
                     </div>                    
                 </div>
@@ -134,7 +136,8 @@
                              полного восстановления их аутентичного состояния и уникальных характеристик.                            
                             Огромную ценность представляет также Исторический архив Lamborghini, в котором бережно 
                             хранится вся документация, выпущенная «домом быков» на протяжении всей своей многолетней
-                             истории.</p>                        
+                             истории.
+                            </p>                        
                     </div>
                     <div class="imgposition">
                         <div class="configurate2">
@@ -145,8 +148,7 @@
                     </div>
                 </div>                
             </div>
-        </section>        
-        </section> 
+        </section>         
         <section class="section_9">
             <div class="section_9_0">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2386.443113693142!2d11.123499934735136!3d44.65885976859362!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477fc3b4b863b99f%3A0x92e12812b537ae95!2sAutomobili%20Lamborghini%20Spa!5e0!3m2!1sru!2sby!4v1667006056373!5m2!1sru!2sby" 
